; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_proc-cmdline.c_proc_cmdline_key_startswith.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_proc-cmdline.c_proc_cmdline_key_startswith.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @proc_cmdline_key_startswith(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = call i32 @assert(i8* %6)
  %8 = load i8*, i8** %5, align 8
  %9 = call i32 @assert(i8* %8)
  br label %10

10:                                               ; preds = %24, %2
  %11 = load i8*, i8** %5, align 8
  %12 = load i8, i8* %11, align 1
  %13 = sext i8 %12 to i32
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %29

15:                                               ; preds = %10
  %16 = load i8*, i8** %4, align 8
  %17 = load i8, i8* %16, align 1
  %18 = load i8*, i8** %5, align 8
  %19 = load i8, i8* %18, align 1
  %20 = call i32 @relaxed_equal_char(i8 signext %17, i8 signext %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %23, label %22

22:                                               ; preds = %15
  store i8* null, i8** %3, align 8
  br label %31

23:                                               ; preds = %15
  br label %24

24:                                               ; preds = %23
  %25 = load i8*, i8** %4, align 8
  %26 = getelementptr inbounds i8, i8* %25, i32 1
  store i8* %26, i8** %4, align 8
  %27 = load i8*, i8** %5, align 8
  %28 = getelementptr inbounds i8, i8* %27, i32 1
  store i8* %28, i8** %5, align 8
  br label %10

29:                                               ; preds = %10
  %30 = load i8*, i8** %4, align 8
  store i8* %30, i8** %3, align 8
  br label %31

31:                                               ; preds = %29, %22
  %32 = load i8*, i8** %3, align 8
  ret i8* %32
}

declare dso_local i32 @assert(i8*) #1

declare dso_local i32 @relaxed_equal_char(i8 signext, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
